--- a/v2/todo
+++ b/v2/todo
@@ -6,3 +6,7 @@
 * webserver: nicer and more completr
 * create eth0 raw-nmap collectors: extend to  more interfaces
 * more reports
+
+
+parse ufw: 53 no slash, en 53 (v6)  no slash
+
